# vscode-python-docker-setup

./: .dockerignore  .env.example  README.md  dev.Dockerfile  docker-compose.yml  pyproject.toml  python.Dockerfile  settings.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
conf/: config.yaml
src/: main.py  utils.py
tests/: conftest.py  test_main.py  test_utils.py
